feat: get not applicable for auspicious data if data no available